# SCMMAB-NIPS2018

./: .gitignore  README.md  causal_discovery_bandit_integration.py  causal_discovery_bandit_integration_UC.py  create_results_table.py  generate_slide_figure.py  pyproject.toml  requirements.txt  run_all_bandit_experiments.py  run_experiments.slurm  setup.py  slide_one_pager.md  snellius_uv_setup.md  test_full_pipeline.py  view_results.py
complete_topological_results/: pomis_topological_results.csv  pomis_topological_results.json
experiment_results/: results_table.md  results_table.tex
final_demo/: pomis_topological_results.csv  pomis_topological_results.json  pomis_topological_summary.csv
npsem/: __init__.py  bandits.py  causal_diagram_utils.py  causal_discovery.py  causal_pipeline.py  causal_visualization.py  dag_enumeration.py  data_simulation.py  latent_projection.py  model.py  plotting.py  pomis_analysis.py  pomis_instrumentation.py  scm_bandits.py  utils.py  where_do.py
npsem/NIPS2018POMIS_exp/: __init__.py  base_bandit_experiment.py  construct_pomis.py  construct_pomis_example.py  demo_latent_projection.py  pomis_topological_experiment.py  report_mean_rewards.py  report_sets_and_arms.py  run_bandit_experiments.py  scm_examples.py  scm_registry.py  test_bandit_strategies.py  test_drawing_re.py  test_four_variable_bandits.py  (+3 more)
pomis_topological_results/: pomis_topological_results.csv  pomis_topological_results.json  pomis_topological_summary.csv
r_scripts/: AAAI17_exp_script.R  README.md  full_admg_learning.R  plot_admgs.py  test.R  verify_pag2admg.R
