[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "npsem"
version = "0.1.0"
description = "Structural Causal Bandits: Where to Intervene?"
authors = [{name = "Sanghack Lee", email = "sanghack.lee@gmail.com"}]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "joblib>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "networkx>=2.5.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "wandb>=0.15.0",
]

[tool.setuptools]
packages = ["npsem", "npsem.NIPS2018POMIS_exp"]